--- a/panel.html
+++ b/panel.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-      <div style="position: fixed; top:10px; right:10px" id="open_kantcshit">
+      <div style="position: fixed; top:80px; right:10px;z-index: 99999" id="open_kantcshit">
         <a class="waves-effect waves-light btn-large" id="br_reset" style="font-size:2.3em">🎨</a>
       </div>
 <div style="position: fixed; bottom: 10px; width:95%; margin:0 30px; background: #fafafa; z-index: 9999999; font-size: 1em; filter: drop-shadow(2px 4px 6px black); border-radius:10px;" id="panel_kantcshit">
