--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>Kant C 💩 | Adjust brightness and contrast on YouTube Videos and similar sites</title>
+	
+	<meta property="og:title" content="Kant C 💩 - Adjust Brigthness on YouTube videos" />
+	  
+	<meta property="og:description" content="Adjust brightness and contrast on YouTube Videos and similar sites">
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://gdi3d.github.io/change-youtube-videos-brightness/" />
+	<meta property="og:image" content="https://gdi3d.github.io/change-youtube-videos-brightness/kantcshit-share.png" />
 
-	<link rel="icon" href="favicon.ico" type="image/png" />
+	<link rel="icon" href="favicon.ico" type="image/ico" />
+	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32"/>
+  	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16"/>
 
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
@@ -57,6 +66,7 @@
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/gdi3d/change-youtube-videos-brightness" target="_blank"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="http://twitter.com/intent/tweet?source=https%3A%2F%2Fgdi3d.github.io%2Fchange-youtube-videos-brightness&text=Adjust+brightness+and+contrast+in+YouTube+Videos,+Vimeo,+Netflix,+HBO,+Prime+video,+or+any other+site+with+a+video+on+it https%3A%2F%2Fgdi3d.github.io%2Fchange-youtube-videos-brightness" target="_blank"><i class="fab fa-twitter"></i></a>
     	</div>
 	</main>
 	<script type="text/javascript" src="js/clipboard.min.js"></script>
