Added tampermonkey user script logo

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/gdi3d/change-youtube-videos-brightness" target="_blank"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="http://twitter.com/intent/tweet?source=https%3A%2F%2Fgdi3d.github.io%2Fchange-youtube-videos-brightness&text=Adjust+brightness+and+contrast+in+YouTube+Videos,+Vimeo,+Netflix,+HBO,+Prime+video,+or+any other+site+with+a+video+on+it https%3A%2F%2Fgdi3d.github.io%2Fchange-youtube-videos-brightness" target="_blank"><i class="fab fa-twitter"></i></a>
+			<a target="_blank" href="https://greasyfork.org/en/scripts/425928-kant-c" target="_blank"><img src="tampermonkey_logo.svg" alt="Tampermonkey User Script"></a>
     	</div>
 	</main>
 	<script type="text/javascript" src="js/clipboard.min.js"></script>
