--- a/index.html
+++ b/index.html
@@ -32,15 +32,13 @@
 	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 	<!-- Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MB1R249T41"></script>
 	<script>
-	    (function (i, s, o, g, r, a, m) {
-	        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-	            (i[r].q = i[r].q || []).push(arguments)
-	        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-	            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-	    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-	    ga('create', 'UA-64542072-1', 'auto');
-	    ga('send', 'pageview');
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-MB1R249T41');
 	</script>
 	<!-- End Google Analytics -->
 </head>
